--- a/MEMBERS/templates/members/create_members.html
+++ b/MEMBERS/templates/members/create_members.html
@@ -72,33 +72,7 @@ input[type="submit"]:hover {
         <h1>Create Member</h1>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <label for="firstname">Firstname:</label>
-            <input type="text" name="firstname" required>
-            <br>
-            <label for="lastname">Lastname:</label>
-            <input type="text" name="lastname" required>
-            <br>
-            <label for="passout_year">Pass out year:</label>
-            <input type="number" name="passout_year" required>
-            <br>
-            <label for="post">Post:</label>
-            <input type="text" name="post" >
-            <br>
-            <label for="dp">Dp:</label>
-            <input type="file" name="dp" required>
-            <br>
-            <label for="instagram_url">Instagram url:</label>
-            <input type="url" name="instagram_url" >
-            <br>
-            <label for="linkedin_url">Linkedin url:</label>
-            <input type="url" name="linkedin_url" >
-            <br>
-            <label for="facebook_url">Facebook url:</label>
-            <input type="url" name="facebook_url" >
-            <br>
-            <label for="github_url">GitHub url:</label>
-            <input type="url" name="github_url">
-            <br>
+            {{ form }}
             <input type="submit" value="Create Member">
         </form>
     </div>
